# algorithm_kafka

./: .gitignore  CMakeLists.txt
include/algorithm/: algorithm.h  cross_line.h  decode.h  detect.h  face_detect.h  face_reid.h  key_frame.h  mark_detector.h  pedestrian_den.h  pedestrian_seg.h  person_reid.h  person_struct.h  plate_struct.h  tracking.h  vehicle_reid.h  vehicle_struct.h
include/common/: byavs.h  glog_init.h  gpu_info.h  grpc.h  grpc_eye_server.h  record.h  utils.h
include/kafka_output/: json2kafka.h  kafka.h
include/nvidia_code/nvdecode/: NvCodecUtils.h
include/nvidia_code/nvencode/: gh_jpegnpp.h
include/tensorRT/: Common.h  cuda_crop.h  cuda_crop_template.h
lib/rapidjson/: detectprettywriter.h  prettywriteroneline.h
src/: main.cpp
src/algorithm/: algorithm.cpp  cross_line.cpp  decode.cpp  detect.cpp  face_detect.cpp  face_reid.cpp  key_frame.cpp  mark_detector.cpp  pedestrian_seg.cpp  pedstrian_den.cpp  person_reid.cpp  person_struct.cpp  plate_struct.cpp  tracking.cpp  vehicle_reid.cpp  vehicle_struct.cpp
src/common/: glog_init.cpp  gpu_info.cpp  grpc.cpp  utils.cpp
src/kafka_output/: json2kafka.cpp  kafka.cpp
src/tensorRT/: Preprocess.cu  cuda_crop.cpp
